feat: add seat claiming and releasing
